# segul

./: .gitignore  .travis.yml  CHANGELOG.md  CITATION.cff  Cargo.toml  LICENSE  README.md  SEGUL-stats_per_locus.csv  complete.fas  simple.fas  tabulated.fas  test.nex
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: release.yml  test.yml
examples/: SEGUL-Stats_per_locus_DNA_sample_file.csv
examples/concat-example/: example.nex  example_partition.nex
examples/data-fasta/: uce-10.fas  uce-2.fas  uce-3.fas  uce-4.fas  uce-5.fas  uce-6.fas  uce-7.fas
examples/data-nex/: uce-4.nex  uce-7.nex
examples/data-nexus/: uce-10.nex  uce-2.nex  uce-3.nex  uce-5.nex  uce-6.nex
examples/data-phy-int/: uce-10.phy  uce-2.phy  uce-3.phy  uce-4.phy  uce-5.phy  uce-6.phy  uce-7.phy
examples/data-phylip/: uce-10.phy  uce-2.phy  uce-3.phy  uce-4.phy  uce-5.phy  uce-6.phy  uce-7.phy
examples/summary-stats/: example_alignment_summary.txt  example_locus_summary.csv  example_taxon_summary.csv
scripts/: gh-compress-Arm64  gh-compress-hpc  gh-upload
snap/: snapcraft.yaml
src/: alignment.rs  args.rs  cli.rs  common.rs  converter.rs  fasta.rs  filter.rs  finder.rs  lib.rs  main.rs  msa.rs  nexus.rs  phylip.rs  picker.rs  stats.rs  utils.rs  writer.rs
src/cli/: args.rs  cli.rs  commands.rs  concat.rs  contigs.rs  convert.rs  extract.rs  filter.rs  id.rs  mod.rs  new_args.rs  old_arg.rs  old_mod.rs  partition.rs  raw.rs  read.rs  remove.rs  rename.rs  split.rs  summarize.rs  summary.rs  translate.rs
src/core/: concat.rs  convert.rs  converter.rs  extract.rs  filter.rs  id.rs  mod.rs  msa.rs  partition.rs  rename.rs  split.rs  stats.rs  summarize.rs  summary.rs  translate.rs
src/handler/: concat.rs  convert.rs  extract.rs  filter.rs  id.rs  mod.rs  partition.rs  remove.rs  rename.rs  split.rs  summarize.rs  translate.rs
src/helper/: alignment.rs  alphabet.rs  archive.rs  common.rs  concat.rs  fastq.rs  filenames.rs  files.rs  finder.rs  logger.rs  mod.rs  partition.rs  qscores.rs  sequence.rs  stats.rs  translation.rs  types.rs  utils.rs
src/parser/: bed.rs  contigs.rs  delimited.rs  fasta.rs  fastq.rs  gzip.rs  maf.rs  mod.rs  nexus.rs  nexus_old.rs  partition.rs  phylip.rs  qscores.rs  txt.rs
src/stats/: common.rs  contigs.rs  fastq.rs  math.rs  mod.rs  qscores.rs  raw.rs  read.rs  sequence.rs  stats.rs
src/writer/: archive.rs  contigs.rs  mod.rs  partition.rs  raw.rs  read.rs  sequences.rs  seqwriter.rs  summary.rs  sumwriter.rs  text.rs
test_files/: complete.nex  delimited.csv  duplicates.nex  idspaces.nex  interleave.fas  interleave.nex  interleave.phy  interleave_whitespaces.phy  invalid_interleave.phy  simple.nex  simple.phy  simple_aa.nex  simple_aa.phy  tabulated.nex  unmatched_block.nex
test_files/concat/: gene_1.nex  gene_2.nex  gene_3.nex  gene_4.nexus
test_files/partition/: concat_part.fas  partition.nex  partition.txt  partition_inv_pos.txt  partition_invalid.txt  partition_no_datatype.txt  partition_whitespaces.nex  partition_whitespaces.txt
test_files/pinf/: aln_3.fasta  aln_4.fasta
tests/: GitHub Copilot  cli.rs  concat.rs  convert.rs  extract.rs  filter.rs  id.rs  integration_tests.rs  partition.rs  raw.rs  read.rs  remove.rs  rename.rs  seq_filter.rs  split.rs  summary.rs  translate.rs  utils.rs
tests/files/: complete.nex  delimited.tsv  idspaces.nex  invalid.phy  simple.fas  simple_aa.fas  simple_id_whitespaces.fas  trimming.fas  unaligned.fas  whitespaces.phy
utils/: gh-compress-hpc  gh-newrelease  gh-upload
(+93 files in other folders)
