[package]
name = "segul"
version = "0.18.1"
authors = ["Heru Handika <herubiolog@gmail.com>"]
edition = "2021"
license = "MIT"
description = "An ultrafast and memory efficient alignment tool for phylogenomics"
readme = "README.md"
homepage = "https://github.com/hhandika/segul"
repository = "https://github.com/hhandika/segul"
keywords = ["cli", "utility", "alignment", "genomics", "phylogenomics"]
categories = ["command-line-utilities", "science"]

[dependencies]
ahash = "0.8.*"
alphanumeric-sort = "1.4.*"
anyhow = "1.0.*"
bytecount = "0.6.*"
colored = "2.0.0"
chrono = "0.4.*"
dialoguer = "0.*"
glob = "0.3.*"
indexmap = "1.*"
indicatif = "0.17.*"
lazy_static = "1.*"
log = "0.*"
log4rs = "1.2.*"
nom = "6.*"
num-format = "0.*"
rayon = "1.*"
regex = "1.*"
clap = { version = "4.1.1", features = ["cargo", "derive"] }

[dev-dependencies]
assert_cmd = "2.*"
predicates = "2.*"
tempdir = "0.3.7"

[profile.release]
debug = false
lto = "fat"
panic = "abort"
