[package]
name = "segul"
version = "0.23.0"
authors = ["Heru Handika <herubiolog@gmail.com>"]
edition = "2024"
license = "MIT"
description = "An ultrafast and memory-efficient tool for phylogenomics"
readme = "README.md"
homepage = "https://www.segul.app/"
repository = "https://github.com/hhandika/segul"
keywords = ["cli", "utility", "alignment", "genomics", "phylogenomics"]
categories = ["command-line-utilities", "science"]

[dependencies]
ahash = "0.8.*"
anyhow = "1.0.*"
bytecount = "0.6.*"
colored = "2.0.0"
chrono = "0.4.*"
dialoguer = "0.*"
glob = "0.3.*"
indexmap = "2.*"
indicatif = "0.17.*"
lazy_static = "1.*"
log = "0.*"
log4rs = "1.*"
nom = "7.*"
num-format = "0.*"
rayon = "1.*"
regex = "1.*"
clap = { version = "4.5.*", features = ["cargo", "derive"] }
noodles = { version = "0.99.*", features = ["fastq", "fasta", "bed"] }
flate2 = "1.0.31"
serde_json = "1.0.91"
serde = { version = "1.0.152", features = ["derive"] }
walkdir = "2.3.3"
assert_approx_eq = "1.1.0"
zip = "0.6.6"
alphanumeric-sort = "1.5.3"
csv = "1.3.0"

[dev-dependencies]
assert_cmd = "2.*"
predicates = "2.*"
tempdir = "0.3.7"

[profile.release]
debug = false
lto = "fat"
panic = "abort"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin_include)'] }
